# tyrone-biggums

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  game_player.Dockerfile  go.Dockerfile  measure  prepare  process-game-memory  process-game-server-results  run  run-client  run-server  run-ts-server  rust-client.Dockerfile  rust.Dockerfile  sum-game-ticks  typescript.Dockerfile
analysis/: main.py
data/: go.10.csv  go.100.cpu.mem.csv  go.100.csv  go.1000.csv  go.1000.mem.cpu.csv  go.1500.csv  go.1500.mem.cpu.csv  go.200.csv  go.2000.csv  go.2000.mem.cpu.csv  go.2500.csv  go.2500.mem.cpu.csv  go.3000.csv  go.50.cpu.mem.csv  go.500.cpu.mem.csv  go.500.csv  go.500.mem.cpu.csv  go.900.cpu.mem.csv  go.950.csv  rs.10.cpu.mem.csv  rs.100.cpu.mem.csv  rs.100.csv  rs.1000.cpu.mem.csv  rs.1000.csv  rs.1500.cpu.mem.csv  rs.1500.csv  rs.200.cpu.mem.csv  rs.200.csv  rs.2500.cpu.mem.csv  rs.2500.csv  rs.50.cpu.mem.csv  rs.50.csv  rs.500.cpu.mem.csv  rs.500.csv  rs.750.cpu.mem.csv  rs.750.csv  rs.850.cpu.mem.csv  rs.850.csv  rs.900.cpu.mem.csv  rs.900.csv  (+16 more)
elixir/: .gitignore  README.md  mix.exs
flame-graphs/: after_dogshit_removed_from_game.heapprofile  before_dogshit_removed_from_game.heapprofile
go/: go.mod
rust/: Cargo.toml  correct  test
rust-alternate/: Cargo.toml
rust-alternate/src/: bullet.rs  command.rs  connection.rs  game.rs  game_result.rs  geometry.rs  lib.rs  message.rs  message_queue.rs  player.rs  server.rs
rust/src/: error.rs  kill.rs  lib.rs  lock.rs
rust/src/chat/: mod.rs
rust/src/game/: bullet.rs  game.rs  game_queue.rs  game_setup.rs  geometry.rs  mod.rs  player.rs  stats.rs  test_utils.rs
rust/src/server/: message.rs  mod.rs  server.rs  socket.rs
typescript/: go.1000.csv  go.900.csv  jest.config.js  package.json  scp  test  test_client.ts  ts.10.csv  ts.100.csv  tsconfig.json  (+1 more)
typescript-results/: c.1200  c.1200.csv  c.1200.tick.csv  c.400  c.400.csv  c.400.tick.csv  c.800  c.800.csv  c.800.tick.csv  c.pool.1200  c.pool.1200.csv  c.pool.1200.tick.csv  c.pool.400  c.pool.400.csv  c.pool.400.tick.csv  c.pool.800  c.pool.800.csv  c.pool.800.tick.csv  r.1200  r.1200.csv  r.1200.tick.csv  r.400  r.400.csv  r.400.tick.csv  r.800  r.800.csv  r.800.tick.csv  r.pool.1200  r.pool.1200.csv  r.pool.1200.tick.csv  r.pool.400  r.pool.400.csv  r.pool.400.tick.csv  r.pool.800  r.pool.800.csv  r.pool.800.tick.csv
(+180 files in other folders)
