[package]
name = "bullet-game"
version = "0.1.0"
description = "Bullet Game"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.8", features = ["derive"] }
futures-util = { version = "0.3.21", features = ["sink"] }
pin-project-lite = "0.2.8"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.17.1"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
