[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
futures = "0.3.19"
futures-channel = "0.3.19"
futures-util = "0.3.19"
log = "0.4.14"
tokio = { version = "1.15.0", features = ["full"] }
tokio-tungstenite = { version = "0.16.1", features = ["native-tls"] }
url = "2.2.2"
