[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.6.0"
async-trait = "0.1.52"
csv = "1.1.6"
env_logger = "0.9.0"
futures = "0.3.21"
futures-channel = "0.3.21"
futures-util = "0.3.21"
log = "0.4.14"
pretty_assertions = "1.1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_repr = "0.1.7"
structopt = "0.3.26"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }
tokio-tungstenite = { version = "0.16.1", features = ["native-tls"] }
url = "2.2.2"
